unpackaged/objects/copado__Automation_Rule__c.object
<CustomObject>
	<fields>
		<fullName>copado__Active__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Is Active</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Automated_Action_Callback__c</fullName>
		<inlineHelpText>API name of the flow used to perform more specific operations, like updating records status, creating other records, etc.</inlineHelpText>
		<label>Automated Action Callback</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Automated_Action__c</fullName>
		<description>Action that will be executed based on the source action and its result.</description>
		<inlineHelpText>Action that will be executed based on the source action and its result.</inlineHelpText>
		<label>Automated Action</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Automation_Connector__c</fullName>
		<inlineHelpText>Connector that maps the payload and parameters between the source and automated actions.Select &quot;Custom&quot; if you want to specify a custom connector class</inlineHelpText>
		<label>Automation Connector</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Cron_Expression__c</fullName>
		<inlineHelpText>Represents the schedule cron expression</inlineHelpText>
		<label>Cron Expression</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Custom_Automation_Connector__c</fullName>
		<inlineHelpText>API name of the Apex class used to map the source and automated actions payloads and parameters</inlineHelpText>
		<label>Custom Automation Connector</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Description__c</fullName>
		<inlineHelpText>This field is used to provide a description of the purpose of this automation</inlineHelpText>
		<label>Description</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Environment__c</fullName>
		<inlineHelpText>List of environments where the source action will be evaluated. You can select up to 13 environments.</inlineHelpText>
		<label>Selected Environments</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Excluded_Environments__c</fullName>
		<inlineHelpText>List of environments to be excluded when a stage is selected. You can select up to 13 environments.</inlineHelpText>
		<label>Excluded Environments</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Execution__c</fullName>
		<inlineHelpText>Indicate if the automated action should be immediately executed or it&apos;ll be scheduled</inlineHelpText>
		<label>Execution</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Immediate</fullName>
					<default>true</default>
					<label>Immediate</label>
				</value>
				<value>
					<fullName>Scheduled</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Filter_Criteria__c</fullName>
		<label>Filter Criteria</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Last_Execution_Date_Time__c</fullName>
		<label>Last Execution Date Time</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Pipeline__c</fullName>
		<inlineHelpText>Pipeline where this automation will be executed. If no Stage or Environment is defined, this automation will applied to the entire pipeline and can be considered the default rule</inlineHelpText>
		<label>Pipeline</label>
		<referenceTo>copado__Deployment_Flow__c</referenceTo>
		<relationshipLabel>Automation Rules</relationshipLabel>
		<relationshipName>Automation_Rules</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Scheduled_Job_Id__c</fullName>
		<label>Scheduled Job Id</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Source_Action_Status__c</fullName>
		<inlineHelpText>Define if the automation should be triggered after a successful or failed execution of the source action</inlineHelpText>
		<label>Source Action Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Successful</fullName>
					<default>true</default>
					<label>Successful</label>
				</value>
				<value>
					<fullName>Error</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Source_Action__c</fullName>
		<inlineHelpText>Action that will trigger the automation</inlineHelpText>
		<label>Source Action</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Copado_Actions</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Stage__c</fullName>
		<inlineHelpText>List of stages where the source action will be evaluated. You can select up 13 stages.</inlineHelpText>
		<label>Selected Stages</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Automation Rule</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Active__c</columns>
		<columns>copado__Pipeline__c</columns>
		<columns>copado__Source_Action__c</columns>
		<columns>copado__Source_Action_Status__c</columns>
		<columns>copado__Automated_Action__c</columns>
		<columns>copado__Execution__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Automation Rule Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Automation Rules</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
	<validationRules>
		<fullName>copado__Stage_and_Environment_both_populated</fullName>
		<active>true</active>
		<description>Prevents Stage and Environment fields are both populated, only one of them should be populated.</description>
		<errorConditionFormula>AND(NOT(ISBLANK(copado__Stage__c)), NOT(ISBLANK(copado__Environment__c)))</errorConditionFormula>
		<errorMessage>Environment and Stage fields cannot be selected at the same time. Define the most granular filters using Environments, or broader filters using Stage.</errorMessage>
	</validationRules>
</CustomObject>